# SpaCon

./: LICENSE  README.md  pyproject.toml  requirement.txt  setup.cfg
SpaCon/: SpaCon_cluster_tutorial.ipynb  zxw_cluster_2encoder_skip_connect.ipynb
SpaCon/model/: Model_Pyg_SpaCon.py  Similar_Neightbor_Loader.py  adjacency_matrix_calculate_modify.py  model_pyg_gate_skip_connect.py  r_mcluster.py  utils.py
data/: coronal_all_cc_out_vs_in_gene.csv  ctx2th_connection_strength_for_th_single_cell.csv  ctx2th_region_ave_connection_strength.csv  ctx_cc_conn_filtered.csv  layer56_to_th_connection_strength.xlsx  sagittal_all_cc_out_vs_in_gene.csv
data_analysis_and_fig_plot_code/: 1_ctx_th_connection_and_gene_exp_cluster.ipynb  2_ctx_th_connection_and_gene_correlation.ipynb  3_ctx_layer_and_th_correlation.ipynb  4_ctx_layer56_and_th_correlation.ipynb  5_ctx_th_gene_analysis.ipynb  6_ctx_cc_intracellular_extracellular_compare.ipynb  7_cc_mRNA_and_cell_plot.ipynb  8_ctx_cc_connection_and_correlation.ipynb  9_PLS_find_metagene.ipynb  MERFISH_ctx_th_connection_and_gene_exp_cluster.ipynb  ctx_layer_and_th_correlation.ipynb
data_preprocessing/: README.md
data_preprocessing_code/: MERFISH_coronal_cellpose_mRNA_assign.ipynb  MERFISH_coronal_out_cell_RNA.ipynb  MERFISH_sagittal_cellpose_mRNA_assign.ipynb  MERFISH_sagittal_out_cell_RNA.ipynb  Spatial_transcriptome_and_connectome_alignment.ipynb  volume_to_2d_surface.py
spacon/: __init__.py  model.py  utils.py
