[metadata]
name = spacon
version = 0.1.1
author = haichao
author_email = qvhaichao@gmail.com
description = SpaCon: integrative analysis of spatial transcriptome and connectome
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quhaichao/SpaCon 
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    torch-geometric
    numpy
    tqdm

